# NSO-GameCube-Controller-Pairing-App

./: .gitignore  CLAUDE.md  DIAGRAMS.md  README.md  gc_controller_enabler.spec  latency_benchmark.py  requirements.txt
.github/workflows/: build-macos.yml  release.yml
native/: CMakeLists.txt  Makefile  gamecontrollerdb_nso_gc.txt  gc-enabler.c
native/hid-nso-gc/: Makefile  dkms.conf  hid-nso-gc.c  install-dkms.sh
platform/linux/: 99-gc-controller.rules  gc-controller.service  install.sh
platform/macos/: com.nso.gc-controller.plist
src/gc_controller/: app.py  autostart.py  calibration.py  connection_manager.py  controller_constants.py  controller_slot.py  controller_ui.py  dsu_server.py  emulation_manager.py  i18n.py  input_processor.py  settings_manager.py  ui_ble_dialog.py  ui_ble_scan_wizard.py  ui_controller_canvas.py  ui_settings_dialog.py  virtual_gamepad.py
src/gc_controller/ble/: ble_subprocess.py  bleak_backend.py  bleak_subprocess.py  bumble_backend.py  sw2_protocol.py
tools/: calibration_sampler.py
